# k8s-maestro

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  book.toml  skills-lock.json
.claude/skills/: kind-testcontainers-skill
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: deploy-docs.yml  publish.yml  release.yml  rust.yml
.opencode/: opencode.json
docs/: README.md  index.md  migration-guide.md  prd.md
docs/adrs/: README.md  template.md
docs/fdrs/: README.md  template.md
docs/getting-started/: quick-start.md
examples/: README.md  apply_and_watch.rs  apply_and_watch_workflow.rs  delete.rs  delete_workflow.rs  dependency_system.rs  empty_dir.rs  multi_step_workflow.rs  python_step.rs  rust_step.rs  use_image_pull_secret.rs  use_ingress_builder.rs  use_job_builder.rs  use_service_builder.rs  use_services.rs  use_sidecar.rs  use_volumes.rs  use_workflow_builder.rs  wasm_step.rs
openspec/changes/api-migration-guide/: design.md  proposal.md  tasks.md
openspec/changes/checkpointing-system/: design.md  tasks.md
openspec/changes/configmap-secret-builders/: design.md  tasks.md
openspec/changes/dependency-chain-system/: proposal.md  tasks.md
openspec/changes/file-observer-sidecar/: design.md  proposal.md  tasks.md
openspec/changes/kube-workflow-steps-implementation/: design.md  proposal.md  tasks.md
openspec/changes/maestro-client-builder-pattern/: tasks.md
openspec/changes/multi-language-exec-steps/: design.md  proposal.md  tasks.md
openspec/changes/networking-module/: design.md  tasks.md
openspec/changes/security-module/: design.md  proposal.md  tasks.md
openspec/changes/sidecar-plugin-system/: design.md  tasks.md
openspec/changes/update-docs-examples-readme/: design.md  proposal.md  tasks.md
openspec/changes/volume-builders/: proposal.md  tasks.md
openspec/changes/workflow-execution-orchestrator/: design.md  tasks.md
openspec/specs/checkpoint-config/: spec.md
openspec/specs/checkpoint-retention/: spec.md
openspec/specs/checkpoint-statefulset/: spec.md
openspec/specs/checkpointing-plugin/: spec.md
openspec/specs/container-builder/: spec.md
openspec/specs/container-env-config/: spec.md
openspec/specs/container-like-trait/: spec.md
openspec/specs/container-resources/: spec.md
openspec/specs/container-volume-mounts/: spec.md
openspec/specs/dns-utilities/: spec.md
openspec/specs/test-utilities/: spec.md
openspec/specs/tiered-cache/: spec.md
openspec/specs/volume-builders/: spec.md
sidecars/file-observer/: Cargo.toml
sidecars/file-observer/src/: main.rs
site-docs/: SUMMARY.md  testing.md
site-docs/getting-started/: README.md  concepts.md  installation.md
site-docs/guides/: README.md  basic-workflow.md
site-docs/reference/: README.md  configuration.md  troubleshooting.md
skills/k8s-maestro-integrator/: README.md  SKILL.md  usage_guide.md
skills/k8s-maestro-integrator/evals/: evals.json
skills/k8s-maestro-integrator/references/: builder_patterns.md  deployment_patterns.md  integration_patterns.md  testing_patterns.md
skills/k8s-maestro-integrator/scripts/: analyze_cluster.sh  detect_crate_features.py  generate_test_code.py  generate_workflow_code.py
src/: lib.rs
src/client/: builder.rs  maestro_client.rs  mod.rs  security_client.rs
src/client/tests/: client_integration_tests.rs
src/clients/: k8s_client.rs  mod.rs
src/entities/: container.rs  container_like.rs  containers.rs  environment_variable_from_object.rs  job_builder.rs  job_name_type.rs  label_operator.rs  maestro_job.rs  maestro_log.rs  mod.rs  workflow_name_type.rs
src/entities/builders/: build_job.rs  build_replica_set.rs  deployment.rs  job.rs  mod.rs  replica_set.rs  stateful_set.rs
src/entities/config/: configmap.rs  image_pull_secret.rs  mod.rs  secret.rs  tests.rs
src/entities/maestro_container/: container_like_impl.rs  image_pull_policy.rs  maestro_container.rs  maestro_container_impl.rs  mod.rs
src/entities/volumes/: configmap.rs  emptydir.rs  hostpath.rs  mod.rs  pvc.rs  secret.rs  traits.rs  types.rs  volume_like.rs  volume_mount_like.rs  volume_mount_pvc_template_like.rs
src/images/: mod.rs
src/migration/: mod.rs
src/networking/: dns.rs  dns_test.rs  ingress.rs  ingress_test.rs  mod.rs  service.rs  service_test.rs
src/networking/plugins/: mod.rs  plugin_registry.rs
src/security/: limits.rs  mod.rs  network_policy.rs  rbac.rs  resource_quota.rs  security_context.rs
src/security/tests/: integration_tests.rs
src/steps/: mod.rs  result.rs  traits.rs
src/steps/exec/: mod.rs  package_loader.rs  python.rs
src/steps/kubernetes/: job.rs  mod.rs  pod.rs  sidecar.rs  types.rs
src/steps/observers/: cache.rs  file_event.rs  file_observer.rs  http_service.rs  integration.rs  mod.rs  observer_config.rs
src/workflows/: builder.rs  mod.rs  workflow.rs
src/workflows/checkpointing/: config.rs  mod.rs  models.rs  statefulset.rs  store.rs
src/workflows/dependency/: chain.rs  condition.rs  dag.rs  mod.rs  topological_sort.rs
src/workflows/execution/: executor.rs  mod.rs  orchestrator.rs  scheduler.rs  workflow_execution.rs
tests/: kind_cluster_lifecycle.rs  workflow_e2e.rs
tests/common/: README.md  e2e_helpers.rs  kind_cluster.rs  mod.rs
tests/common/fixtures/: README.md  mod.rs
tests/common/mocking/: mod.rs
tests/e2e/: mod.rs
tests/integration/: mod.rs
(+103 files in other folders)
