[package]
name = "k8s-maestro"
version = "1.0.0-beta"
edition = "2021"

description = "A Kubernetes job orchestrator tool library"
license = "MIT OR Apache-2.0"
categories = []

[lib]
name = "k8s_maestro"

[dependencies]
log = "0.4"
env_logger = "0.11"

anyhow = "1.0"

k8s-openapi = { version = "0.24" }
kube = { version = "0.99", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }

async-stream = "0.3.4"
serde = { version = "1.0.198", features = ["serde_derive", "derive"] }
dyn-clone = "1.0.17"
futures = "0.3.31"
rustls = { version = "0.23.27", features = ["ring"] }

[features]
k8s-openapi = []
kube = []

k8s_v1_28 = ["k8s-openapi/v1_28", "k8s-openapi", "kube"]
k8s_v1_29 = ["k8s-openapi/v1_29", "k8s-openapi", "kube"]
k8s_v1_30 = ["k8s-openapi/v1_30", "k8s-openapi", "kube"]
k8s_v1_31 = ["k8s-openapi/v1_31", "k8s-openapi", "kube"]
k8s_v1_32 = ["k8s-openapi/v1_32", "k8s-openapi", "kube"]

default = ["k8s_v1_28"]

[dev-dependencies]
tokio = { version = "1", default-features=false, features = ["macros", "rt"] }
serde_yml = "0.0.12"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive", "color", "suggestions", "env", "unicode"] }

k8s-openapi = { version = "0.24", features = ["v1_28"]}
