[package]
name = "k8s-maestro"
version = "0.3.0"
edition = "2021"

description = "A Kubernetes job orchestrator tool library"
license = "MIT OR Apache-2.0"
categories = []

[lib]
name = "k8s_maestro"

[dependencies]
log = "0.4.27"
env_logger = "0.11"

anyhow = "1.0"
clap = { version = "4.1.7", features = ["derive", "color", "suggestions", "env", "unicode"] }

k8s-openapi = { version = "0.24" }
kube = { version = "0.99", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }

async-stream = "0.3.4"
serde = { version = "1.0.198", features = ["serde_derive", "derive"] }
serde_json = "1.0"
dyn-clone = "1.0.17"
futures = "0.3.31"
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
k8s-openapi = []
kube = []

k8s_v1_28 = ["k8s-openapi/v1_28", "k8s-openapi", "kube"]
k8s_v1_29 = ["k8s-openapi/v1_29", "k8s-openapi", "kube"]
k8s_v1_30 = ["k8s-openapi/v1_30", "k8s-openapi", "kube"]
k8s_v1_31 = ["k8s-openapi/v1_31", "k8s-openapi", "kube"]
k8s_v1_32 = ["k8s-openapi/v1_32", "k8s-openapi", "kube"]

default = ["k8s_v1_28"]

[dev-dependencies]
tokio = { version = "1", default-features=false, features = ["macros", "rt", "rt-multi-thread"] }
serde_yml = "0.0.12"
env_logger = "0.11"
testcontainers = "0.27"
mockall = "0.14"
tokio-test = "0.4"
base64 = "0.22"
