[package]
name = "k8s-maestro"
version = "1.0.3"
edition = "2021"

description = "A Kubernetes job orchestrator tool library"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "config", "database"]
documentation = "https://docs.rs/k8s-maestro"
homepage = "https://github.com/neurono-ml/k8s-maestro"
repository = "https://github.com/neurono-ml/k8s-maestro"

[lib]
name = "k8s_maestro"

[dependencies]
log = "0.4.27"
env_logger = "0.11"

anyhow = "1.0"
clap = { version = "4.1.7", features = ["derive", "color", "suggestions", "env", "unicode"] }
thiserror = "2.0"
async-trait = "0.1"

k8s-openapi = { version = "0.24" }
kube = { version = "0.99", default-features = false, features = ["runtime", "derive", "client", "rustls-tls"] }

async-stream = "0.3.4"
serde = { version = "1.0.198", features = ["serde_derive", "derive"] }
serde_json = "1.0"
dyn-clone = "1.0.17"
futures = "0.3.31"
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"

notify = "8.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
lru = "0.12"
mime_guess = "2.0"
mime = "0.3"
git2 = { version = "0.20.4", optional = true }
sha2 = { version = "0.10.9", optional = true }
tempfile = { version = "3.27.0", optional = true }
libloading = "0.8"

[features]
k8s-openapi = []
kube = []
exec-steps = ["git2", "sha2", "tempfile"]

k8s_v1_28 = ["k8s-openapi/v1_28", "k8s-openapi", "kube"]
k8s_v1_29 = ["k8s-openapi/v1_29", "k8s-openapi", "kube"]
k8s_v1_30 = ["k8s-openapi/v1_30", "k8s-openapi", "kube"]
k8s_v1_31 = ["k8s-openapi/v1_31", "k8s-openapi", "kube"]
k8s_v1_32 = ["k8s-openapi/v1_32", "k8s-openapi", "kube"]

default = ["k8s_v1_28", "exec-steps"]
git2 = ["dep:git2"]
sha2 = ["dep:sha2"]
tempfile = ["dep:tempfile"]

[dev-dependencies]
tokio = { version = "1", default-features=false, features = ["macros", "rt", "rt-multi-thread"] }
serde_yml = "0.0.12"
env_logger = "0.11"
testcontainers = "0.27"
mockall = "0.14"
tokio-test = "0.4"
base64 = "0.22"

[package.metadata.docs.rs]
features = ["k8s_v1_28"]
no-default-features = true
rustdoc-args = ["--cfg", "docsrs"]
