[package]
name = "file-observer-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "file-observer-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "8.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
